# surrogate-baselines

./: .gitmodules  README.md  pyproject.toml
libs/pykoopman_interface/: .gitignore  pyproject.toml
libs/pykoopman_interface/config/: train_test_dmd.yaml
libs/pykoopman_interface/src/pykoopman_interface/: __init__.py  log_hydra_to_mlflow.py  pk_interface_config.py  train_dmd.py  train_edmdc.py
